fixscrollBarBug1.3

--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -83,6 +83,7 @@
   width: 100%;
   flex-direction: column;
   min-height: 100%;
+  background-color: #778da9;
   @media (max-width: 1600px) {
     margin-left: 322px;
   }
