--- a/src/index.css
+++ b/src/index.css
@@ -15,4 +15,7 @@
 body {
   margin: 0px;
   padding: 0px;
+  background-color: #778da9;
+  height: 100%;
+  width: 100%;
 }
